apis/customers/route-tls.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: customers-ingress
  annotations:
    hub.traefik.io/api: customers-api
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`customers.airlines.EXTERNAL_IP.traefik.me`)
      services:
        - name: customers-app
          port: 3000
  tls:
    certResolver: traefik-airlines
